--- a/dubboConsumer/web/WEB-INF/web.xml
+++ b/dubboConsumer/web/WEB-INF/web.xml
@@ -7,7 +7,12 @@
 
 
 
-
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/spring/*.xml
+        </param-value>
+    </context-param>
 
     <servlet>
         <servlet-name>HelloWorld</servlet-name>
@@ -16,7 +21,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>HelloWorld</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/servlet</url-pattern>
     </servlet-mapping>
 
 
